--- a/views/bookmarks/add.erb
+++ b/views/bookmarks/add.erb
@@ -1,5 +1,6 @@
 <h1> Please enter the URL to be added to the Bookmark Manager: </h1>
 <form action="/bookmarks/add" method="post">
-  <input type="text" name="url" />
+  <input type="text" name="url" placeholder="URL" />
+  <input type="text" name="title" placeholder="Title" />
   <input type="submit" value="Submit" />
 </form>
